add metrics endpoint for prometheus
