# api/openapi.yaml
@@ -223,6 +223,19 @@ paths:
         "400":
           description: Error en la solicitud
       x-swagger-router-controller: Juegos
+  /metrics:
+    get:
+      tags:
+      - Juegos
+      summary: Obtiene metricas de la api de juegos
+      description: Obtiene metricas de la api de juegos
+      operationId: getMetrics
+      responses:
+        "201":
+          description: item created
+        "400":
+          description: "invalid input, object invalid"
+      x-swagger-router-controller: Juegos
 components:
   schemas:
     Juego:
